Update dependencies and code for spring boot 4